# operations-debs-contenttranslation-apertium-en-ca

./: AUTHORS  ChangeLog  Makefile.am  README  apertium-en-ca.ca-en-poly.dix  apertium-en-ca.ca-en.t1x  apertium-en-ca.ca-en.t2x  apertium-en-ca.ca-en.t3x  apertium-en-ca.ca.dix  apertium-en-ca.ca.tsx  apertium-en-ca.en-ca-poly.dix  apertium-en-ca.en-ca.dix  apertium-en-ca.en-ca.t1x  apertium-en-ca.en-ca.t2x  apertium-en-ca.en-ca.t3x  apertium-en-ca.en.metadix  apertium-en-ca.en.tsx  apertium-en-ca.post-ca.dix  apertium-en-ca_0.9.3+svn~57977.orig.tar.gz.delta  apertium-en-ca_0.9.3+svn~57977.orig.tar.gz.id  apertium-en-ca_0.9.3~r61328.orig.tar.bz2.delta  apertium-en-ca_0.9.3~r61328.orig.tar.bz2.id  apertium-en-ca_1.0.1.orig.tar.bz2.delta  apertium-en-ca_1.0.1.orig.tar.bz2.id  apertium-eng-cat.cat-eng.arx  apertium-eng-cat.cat-eng.lrx  apertium-eng-cat.cat-eng.lsx  apertium-eng-cat.cat-eng.t1x  apertium-eng-cat.cat-eng.t2x  apertium-eng-cat.cat-eng.t3x  apertium-eng-cat.eng-cat.arx  apertium-eng-cat.eng-cat.lrx  apertium-eng-cat.eng-cat.lsx  apertium-eng-cat.eng-cat.t1x  apertium-eng-cat.eng-cat.t2x  apertium-eng-cat.eng-cat.t3x  apertium-eng-cat.eng-cat.t4x  ca-en.prob  configure.ac  en-ca-supervised.make  (+6 more)
debian/: changelog  control
dev/html-texts/: README
dev/odt-tests/: README  file1.odt  file2.odt  file3.odt  file4.odt  file5.odt  file6.odt  file8.odt  file9.odt
